--- a/sgd/build.gradle
+++ b/sgd/build.gradle
@@ -17,6 +17,10 @@ sourceSets {
     }
 }
 
+dependencies {
+    compile group: 'org.intermine', name: 'bio-core', version: bioVersion, transitive: false
+}
+
 processResources {
     from('.') { include ("*.properties")}
 }
